[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/ThinkPanel.gd" id="1_script"]

[node name="ThinkPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "THINK"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FinanceLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Finance: 0 Kč"

[node name="TeamHeader" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
text = "TVŮJ TÝM:"

[node name="TeamList" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MissionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Mise: -"

[node name="IntelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Informace: 0%"

[node name="IntelProgress" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2
step = 1.0

[node name="Btn_Close" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "ZAVŘÍT"

[connection signal="pressed" from="Panel/VBoxContainer/Btn_Close" to="." method="_on_close_button_pressed"]
